[NotForReview] Support force enable zoom for touch-action filter

Bug: 724964
Change-Id: Ie729214f94b6d28bebac9179ad1c9fd768ebc5f3