third_party/WebKit/Source/core/input/TouchActionUtil.cpp
@@ -6,6 +6,7 @@
 
 #include "core/dom/Node.h"
 #include "core/dom/NodeComputedStyle.h"
+#include "core/frame/Settings.h"
 #include "core/html/HTMLFrameOwnerElement.h"
 #include "core/layout/LayoutBox.h"
 #include "core/layout/LayoutObject.h"
@@ -14,10 +15,17 @@ namespace blink {
 namespace TouchActionUtil {
 
 TouchAction ComputeEffectiveTouchAction(const Node& node) {
-  if (node.GetComputedStyle())
-    return node.GetComputedStyle()->GetEffectiveTouchAction();
+  TouchAction touch_action = TouchAction::kTouchActionAuto;
+  if (node.GetComputedStyle()) {
+    TouchAction touch_action =
+        node.GetComputedStyle()->GetEffectiveTouchAction();
+    LOG(ERROR) << node.GetDocument().GetSettings()->GetForceEnableZoom();
+    if (touch_action != TouchAction::kTouchActionNone &&
+        node.GetDocument().GetSettings()->GetForceEnableZoom())
+      touch_action |= TouchAction::kTouchActionPinchZoom;
+  }
 
-  return TouchAction::kTouchActionAuto;
+  return touch_action;
 }
 
 }  // namespace TouchActionUtil
